Adding my first configuration file

--- a/Pro_002/CMakeLists.txt
+++ b/Pro_002/CMakeLists.txt
@@ -7,6 +7,9 @@ project(Proj_002)
 set(CMAKE_CXX_STANDARD 11)
 set(CMAKE_CXX_STANDARD_REQUIRED True)
 
+#Adding a configuration file
+configure_file(Versionconfig.h.in Versionconfig.h)
+
 #Include directories
 include_directories(
     ${CMAKE_SOURCE_DIR}/inc
