--- a/Pro_002/CMakeLists.txt
+++ b/Pro_002/CMakeLists.txt
@@ -22,3 +22,16 @@ file(GLOB_RECURSE SOURCES
 
 # Add executable
 add_executable(mainexe ${SOURCES})
+
+# Add Google Test
+add_subdirectory(googletest)
+include_directories(${gtest_SOURCE_DIR}/include ${gtest_SOURCE_DIR})
+
+# Test source files
+file(GLOB_RECURSE TEST_SOURCES
+    ${CMAKE_SOURCE_DIR}/test/*.cpp
+)
+
+# Add test executable
+add_executable(testexe ${TEST_SOURCES})
+target_link_libraries(testexe gtest gtest_main)
