Cmake inside CMake

--- a/Pro_003/CMakeLists.txt
+++ b/Pro_003/CMakeLists.txt
@@ -12,8 +12,10 @@ configure_file(Versionconfig.h.in Version.h)
 
 #Add subdirectory, this will look for seperate CMake under that file
 add_subdirectory(Module_0)
-list(APPEND_EXTRA_INCLUDES "${PROJECT_SOURCE_DIR}/Module_0")
+list(APPEND EXTRA_INCLUDES "${PROJECT_SOURCE_DIR}/Module_0")
 
 #Add executable
 add_executable(Mainexe src/main.cpp)
-traget_link
+
+# Link the module library to the main executable
+target_link_libraries(Mainexe PUBLIC Module_0_lib)
